k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  labels:
    app: sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample-app
        imagePullPolicy: Always
        image: hashicorp/http-echo
        ports:
        - containerPort: 5678
        args:
          - "-text=sample-app"
      restartPolicy: OnFailure
