k8s_manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: sample-app-service
spec:
  selector:
    app: sample
  ports:
    - port: 5678 # Default port for hashicorp image
