k8s_manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: sample.app.com
    kubernetes.io/ingress.class: alb
  name: sample-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sample-app-service
          servicePort: 5678
